[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/wipe.png" type="Texture" id=1]
[ext_resource path="res://Sounds/wipe.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Wipe.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Wipe"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WipeSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("WipeSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.136848,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Wipe" type="Node2D"]
script = ExtResource( 3 )

[node name="WipeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0

[node name="WipeSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Wipe = SubResource( 1 )

[node name="WipeTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="WipeTimer2" type="Timer" parent="."]
wait_time = 0.2
[connection signal="timeout" from="WipeTimer" to="." method="_on_WipeTimer_timeout"]
[connection signal="timeout" from="WipeTimer2" to="." method="_on_WipeTimer2_timeout"]
